src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__builtin_function_call_upper_bound_expr.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type { [16 x i32], i32 }
%__foo_vla = type { i32*, [2 x i32] }

@MY_CONST = unnamed_addr constant i32 10
@main_instance = global %main zeroinitializer
@____foo_vla__init = unnamed_addr constant %__foo_vla zeroinitializer

define void @main(%main* %0) {
entry:
  %a = getelementptr inbounds %main, %main* %0, i32 0, i32 0
  %b = getelementptr inbounds %main, %main* %0, i32 0, i32 1
  %auto_deref = load [16 x i32], [16 x i32]* %a, align [filtered]
  %outer_arr_gep = getelementptr inbounds [16 x i32], [16 x i32]* %a, i32 0, i32 0
  %vla_struct = alloca %__foo_vla, align [filtered]
  %vla_array_gep = getelementptr inbounds %__foo_vla, %__foo_vla* %vla_struct, i32 0, i32 0
  %vla_dimensions_gep = getelementptr inbounds %__foo_vla, %__foo_vla* %vla_struct, i32 0, i32 1
  store [8 x i32] [i32 0, i32 1, i32 1, i32 2, i32 2, i32 3, i32 3, i32 4], [2 x i32]* %vla_dimensions_gep, align [filtered]
  store i32* %outer_arr_gep, i32** %vla_array_gep, align [filtered]
  %1 = load %__foo_vla, %__foo_vla* %vla_struct, align [filtered]
  %vla_struct_ptr = alloca %__foo_vla, align [filtered]
  store %__foo_vla %1, %__foo_vla* %vla_struct_ptr, align [filtered]
  %call = call i32 @foo(%__foo_vla* %vla_struct_ptr)
  store i32 %call, i32* %b, align [filtered]
  ret void
}

define i32 @foo(%__foo_vla* %0) {
entry:
  %foo = alloca i32, align [filtered]
  %vla = alloca %__foo_vla*, align [filtered]
  store %__foo_vla* %0, %__foo_vla** %vla, align [filtered]
  store i32 0, i32* %foo, align [filtered]
  %deref = load %__foo_vla*, %__foo_vla** %vla, align [filtered]
  %dim = getelementptr inbounds %__foo_vla, %__foo_vla* %deref, i32 0, i32 1
  %1 = getelementptr inbounds [2 x i32], [2 x i32]* %dim, i32 0, i32 7
  %2 = load i32, i32* %1, align [filtered]
  store i32 %2, i32* %foo, align [filtered]
  %deref1 = load %__foo_vla*, %__foo_vla** %vla, align [filtered]
  %dim2 = getelementptr inbounds %__foo_vla, %__foo_vla* %deref1, i32 0, i32 1
  %3 = getelementptr inbounds [2 x i32], [2 x i32]* %dim2, i32 0, i32 7
  %4 = load i32, i32* %3, align [filtered]
  store i32 %4, i32* %foo, align [filtered]
  %foo_ret = load i32, i32* %foo, align [filtered]
  ret i32 %foo_ret
}
