src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__cast_lword_to_pointer.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

define signext i16 @baz() {
entry:
  %baz = alloca i16, align [filtered]
  %ptr_x = alloca ptr, align [filtered]
  %y = alloca i64, align [filtered]
  store ptr null, ptr %ptr_x, align [filtered]
  store i64 0, ptr %y, align [filtered]
  store i16 0, ptr %baz, align [filtered]
  %load_y = load i64, ptr %y, align [filtered]
  %0 = inttoptr i64 %load_y to ptr
  store ptr %0, ptr %ptr_x, align [filtered]
  %baz_ret = load i16, ptr %baz, align [filtered]
  ret i16 %baz_ret
}
