src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__compare_date_time_literals.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

%main = type {}

@main_instance = global %main zeroinitializer

define void @main(%main* %0) {
entry:
  %cmp1 = alloca i8, align [filtered]
  %cmp2 = alloca i8, align [filtered]
  %cmp3 = alloca i8, align [filtered]
  %cmp4 = alloca i8, align [filtered]
  %cmp5 = alloca i8, align [filtered]
  %cmp6 = alloca i8, align [filtered]
  %cmp7 = alloca i8, align [filtered]
  %cmp8 = alloca i8, align [filtered]
  store i8 0, i8* %cmp1, align [filtered]
  store i8 0, i8* %cmp2, align [filtered]
  store i8 0, i8* %cmp3, align [filtered]
  store i8 0, i8* %cmp4, align [filtered]
  store i8 0, i8* %cmp5, align [filtered]
  store i8 0, i8* %cmp6, align [filtered]
  store i8 0, i8* %cmp7, align [filtered]
  store i8 0, i8* %cmp8, align [filtered]
  store i8 0, i8* %cmp1, align [filtered]
  store i8 1, i8* %cmp2, align [filtered]
  store i8 0, i8* %cmp3, align [filtered]
  store i8 1, i8* %cmp4, align [filtered]
  store i8 0, i8* %cmp5, align [filtered]
  store i8 1, i8* %cmp6, align [filtered]
  store i8 0, i8* %cmp7, align [filtered]
  store i8 1, i8* %cmp8, align [filtered]
  ret void
}
