src/codegen/tests/snapshots/rusty__codegen__tests__expression_tests__int_to_intvar.snap
---
source: src/codegen/tests/expression_tests.rs
expression: result
---
; ModuleID = 'main'
source_filename = "main"

define i32 @main() {
entry:
  %main = alloca i32, align 4
  %x = alloca i32, align 4
  %y = alloca i32, align 4
  store i32 0, i32* %x, align 4
  store i32 0, i32* %y, align 4
  store i32 0, i32* %main, align 4
  %load_x = load i32, i32* %x, align 4
  %0 = sitofp i32 %load_x to float
  %load_y = load i32, i32* %y, align 4
  %call = call float @EXPT__REAL__DINT(float %0, i32 %load_y)
  %1 = fptosi float %call to i32
  store i32 %1, i32* %main, align 4
  %main_ret = load i32, i32* %main, align 4
  ret i32 %main_ret
}

declare float @EXPT__REAL__DINT(float, i32)

